tests/fail/cede_param_missing.stderr
error[E04570]: Argument must be explicitly passed with 'cede' because the function consumes it
 --> tests/fail/cede_param_missing.tk:14:30
    |
 14 |     auto v = consume_payload(p)
    |                              ^
